--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,21 +15,28 @@
   -->
 
 <resources>
-    <string name="app_name">TO-DO-MVP-DAGGER</string>
+    <string name="app_name">Petra - Pet Tracking</string>
     <string name="add_task">New TO-DO</string>
+    <string name="add_pet">New Pet</string>
     <string name="edit_task">Edit TO-DO</string>
+    <string name="edit_pet">Edit Pet</string>
     <string name="task_marked_complete">Task marked complete</string>
     <string name="task_marked_active">Task marked active</string>
     <string name="loading_tasks_error">Error while loading tasks</string>
+    <string name="loading_pets_error">Error while loading pets</string>
     <string name="completed_tasks_cleared">Completed tasks cleared</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_clear">Clear completed</string>
     <string name="menu_delete_task">Delete task</string>
+    <string name="menu_delete_pet">Delete pet</string>
     <string name="navigation_view_header_title">TO-DOs</string>
     <string name="title_hint">Title</string>
-    <string name="description_hint">Enter your TO-DO here.</string>
+    <string name="task_description_hint">Enter your TO-DO here.</string>
+    <string name="pet_description_hint">Enter your Pet here.</string>
     <string name="empty_task_message">TO DOs cannot be empty</string>
+    <string name="empty_pet_message">Pets cannot be empty</string>
     <string name="successfully_saved_task_message">TO-DO saved</string>
+    <string name="successfully_saved_pet_message">Pet saved</string>
     <string name="list_title">TO-DO List</string>
     <string name="statistics_title">Statistics</string>
     <string name="statistics_no_tasks">You have no tasks.</string>
@@ -51,9 +58,11 @@
     <string name="label_active">Active TO-DOs</string>
     <string name="label_completed">Completed TO-DOs</string>
     <string name="no_tasks_all">You have no TO-DOs!</string>
+    <string name="no_pets_all">You have no pets!</string>
     <string name="no_tasks_active">You have no active TO-DOs!</string>
     <string name="no_tasks_completed">You have no completed TO-DOs!</string>
     <string name="no_tasks_add">Add a TO-DO item +</string>
+    <string name="no_pets_add">Add a pet item +</string>
     <string name="refresh">Refresh</string>
 
 </resources>
